# anchor-leads

./: .env.example  .fb_cookies.json  .gitignore  .graphifyignore  CLAUDE.md  README.md  pyproject.toml
crm/: package-lock.json  package.json  proxy.ts  vitest.config.ts
crm/app/: layout.tsx  page.tsx
crm/app/actions/: auth.ts  call-logs.ts  invite.ts
crm/app/bootstrap/: page.tsx
crm/app/login/: page.tsx
crm/app/scripts/: chat_ai.md  ghl_crm.md  mcb.md  reputation.md  website.md
crm/app/team/: page.tsx
crm/components/: filter-chips.tsx  lead-list.tsx  sidebar.tsx  top-bar.tsx
crm/components/lead-detail/: call-log-tab.tsx  index.tsx  intel-tab.tsx  script-tab.tsx
crm/lib/: filters.test.ts  filters.ts  scripts.ts  store.ts  types.ts
crm/migrations/: 005_team_members.sql  006_call_logs.sql  007_saved_views.sql  008_leads_view.sql
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_python  graph.html  graph.json
migrations/: 001_leads.sql  002_lead_enrichment.sql  003_lead_notes.sql  004_scraper_runs.sql  009_fb_checked_at.sql
prompts/: score_lead.md
scripts/: com.anchor.enrich.plist  com.anchor.health.plist  health_check.sh
src/scraper/: browser.py  cli.py  config.py  db.py  http_fetch.py  llm.py  models.py
tasks/: lessons.md  todo.md  workflow.md
tests/: test_cli.py  test_config.py  test_db.py  test_discover.py  test_enrich.py  test_facebook.py  test_facebook_fast.py  test_filter.py  test_google_maps.py  test_llm.py  test_models.py  test_owner.py  test_score.py  test_website.py
tests/fixtures/: overture_sample.json
(+52 files in other folders)
