[project]
name = "anchor-leads"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "supabase>=2.5",
    "duckdb>=1.0",
    "playwright>=1.44",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anthropic>=0.34",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "pytest-mock>=3.14", "respx>=0.21"]

[project.scripts]
scraper = "scraper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
